Corrigiendo estructura para soportar categorías en clientes
