# src/main/java/com/bank_example/user_service/domain/models/entities/Company.java
@@ -1,5 +1,6 @@
 package com.bank_example.user_service.domain.models.entities;
 
+import com.bank_example.user_service.domain.models.value_objects.CompanyCategory;
 import com.bank_example.user_service.shared.models.BasicInformation;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -14,4 +15,5 @@ public class Company extends BasicInformation {
     private String fiscalAddress;
     private String commercialName;
     private List<Representative> representatives;
+    private CompanyCategory category;
 }
