# src/main/java/com/bank_example/user_service/domain/models/value_objects/CompanyCategory.java
@@ -1,0 +1,5 @@
+package com.bank_example.user_service.domain.models.value_objects;
+
+public enum CompanyCategory {
+    STANDARD, PYME;
+}
