# src/main/java/com/bank_example/user_service/infraestructure/out/persistence/models/ClientDoc.java
@@ -1,12 +1,11 @@
 package com.bank_example.user_service.infraestructure.out.persistence.models;
 
-import com.bank_example.user_service.domain.models.value_objects.ClientCategory;
 import com.bank_example.user_service.domain.models.value_objects.ClientType;
 import com.bank_example.user_service.shared.models.AuditTrail;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
+import org.bson.types.ObjectId;
 import org.springframework.data.mongodb.core.mapping.Document;
-import org.springframework.data.mongodb.core.mapping.DocumentReference;
 
 @Document(collection = "clients")
 @Data
@@ -14,13 +13,8 @@ import org.springframework.data.mongodb.core.mapping.DocumentReference;
 public class ClientDoc extends AuditTrail {
 
     private String id;
-
-    @DocumentReference
-    private PersonDoc person;
-
-    @DocumentReference
-    private CompanyDoc company;
+    private ObjectId personId;
+    private ObjectId companyId;
     private ClientType clientType;
-    private ClientCategory clientCategory;
     private Boolean active;
 }
