# src/main/java/com/bank_example/user_service/infraestructure/out/persistence/models/CompanyDoc.java
@@ -1,5 +1,6 @@
 package com.bank_example.user_service.infraestructure.out.persistence.models;
 
+import com.bank_example.user_service.domain.models.value_objects.CompanyCategory;
 import com.bank_example.user_service.shared.models.BasicInformation;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -13,6 +14,7 @@ import java.util.List;
 @EqualsAndHashCode(callSuper = true)
 public class CompanyDoc extends BasicInformation {
 
+    private CompanyCategory category;
     private String fiscalAddress;
     private String commercialName;
     private List<RepresentativeDoc> representatives;
