# src/main/java/com/bank_example/user_service/infraestructure/out/persistence/models/PersonDoc.java
@@ -2,6 +2,7 @@ package com.bank_example.user_service.infraestructure.out.persistence.models;
 
 
 import com.bank_example.user_service.domain.models.value_objects.IdentifierType;
+import com.bank_example.user_service.domain.models.value_objects.PersonCategory;
 import com.bank_example.user_service.shared.models.BasicInformation;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -12,6 +13,7 @@ import org.springframework.data.mongodb.core.mapping.Document;
 @EqualsAndHashCode(callSuper = true)
 public class PersonDoc extends BasicInformation {
 
+    private PersonCategory category;
     private String lastname;
     private IdentifierType identifierType;
 
